// @by near generated
use crate::inner_impl_default_protobuf_raw_codec;

pub mod ping;
inner_impl_default_protobuf_raw_codec!(ping::Proof_of_ping);
inner_impl_default_protobuf_raw_codec!(ping::Proof_of_ping_resp);
inner_impl_default_protobuf_raw_codec!(ping::Proof_of_device);
inner_impl_default_protobuf_raw_codec!(ping::Proof_of_device_resp);
